// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddRecipeForm Edit Mode should render with right amount of elements 1`] = `
<div
  className="container page-manage__add z-depth-1"
>
  <form
    className="my-recipe__add--form"
    onSubmit={[Function]}
  >
    <label
      className="my-recipe__add--form___name"
      htmlFor="recipe-name"
    >
      Name
      <input
        defaultValue="Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref"
        id="recipe-name"
        name="recipe-name"
        onChange={[Function]}
        placeholder="Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref"
        type="text"
      />
    </label>
    <div
      className="description-image"
    >
      <label
        className="my-recipe__add--form___desc"
        htmlFor="recipe-description"
      >
        Description
        <textarea
          defaultValue="This is one of my 'go to' recipes and it takes only about 15 minutes from start to finish. The only prep work really is mashing the garlic. The sauce is great on any pasta, but I prefer angel hair or spaghetti."
          id="recipe-description"
          onChange={[Function]}
          placeholder="e.g: short description..."
        />
      </label>
      <div
        className="my-recipe__add--form___img"
      >
        <p
          className="label"
        >
          Image
        </p>
        <ImageUpload
          altText="Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref"
          className=""
          defaultImgUrl="https://x.kinja-static.com/assets/images/logos/placeholders/default.png"
          imageUploadHandler={[Function]}
          imageUploadProgress="pending"
          imgUrl="http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg"
        />
      </div>
    </div>
    <div
      className="ingredients-instruction"
    >
      <fieldset
        className="ingredients-form my-recipe__add--form___ingredients"
      >
        <legend>
          Ingredient(s):
        </legend>
        <ol>
          <li
            key="0"
          >
            2 tablespoons olive oil
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="1"
          >
            3 cloves garlic
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="2"
          >
            2 tablespoons capers
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="3"
          >
            1 tablespoon anchovy paste
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="4"
          >
            1 teaspoon red pepper flakes
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="5"
          >
            1 (24 ounce) jar tomato pasta sauce
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="6"
          >
            1/4 cup water
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="7"
          >
            1 cup good-quality crisp white wine
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="8"
          >
            2 (6.5 ounce) cans chopped clams, drained with juice reserved
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="9"
          >
            salt and pepper to taste
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="10"
          >
            1 pound dry spaghetti
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="11"
          >
            1/4 cup freshly grated Parmesan cheese
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="12"
          >
            Chopped fresh basil leaves or parsley
            <a
              className="remove-item remove-ingredients"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
        </ol>
        <a
          className="add-new add-new__ingredient"
          href="/add-new"
          onClick={[Function]}
        >
          <i
            className="mdi mdi-plus"
          />
          <span>
            Add an ingredient
          </span>
        </a>
      </fieldset>
      <fieldset
        className="instructions-form my-recipe__add--form___instructions"
      >
        <legend>
          Instruction(s):
        </legend>
        <ol>
          <li
            key="0"
          >
            Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato
            <a
              className="remove-item remove-instructions"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="1"
          >
            Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.
            <a
              className="remove-item remove-instructions"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
          <li
            key="2"
          >
            Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.
            <a
              className="remove-item remove-instructions"
              href="/delete"
              onClick={[Function]}
            >
              <i
                className="mdi mdi-delete"
              />
            </a>
          </li>
        </ol>
        <a
          className="add-new add-new__instruction"
          href="/add-new"
          onClick={[Function]}
        >
          <i
            className="mdi mdi-plus"
          />
          <span>
            Add an instruction
          </span>
        </a>
      </fieldset>
    </div>
    <div
      className="form-btns"
    >
      <SubmitButton
        handleClick={[Function]}
        submitLoading={false}
        submitText="Update"
      />
      <Link
        replace={false}
        to="/user/recipes"
      >
        or go back to your recipe list
      </Link>
    </div>
  </form>
</div>
`;

exports[`AddRecipeForm Edit Mode should show a preloader while fetching recipe in edit mode 1`] = `
<div
  className="container page-manage__add z-depth-1"
>
  <Preloader />
</div>
`;

exports[`AddRecipeForm should render with right amount of elements 1`] = `
<AddRecipeForm
  dispatch={[Function]}
  history={
    Object {
      "push": [Function],
    }
  }
  isEditMode={false}
  recipe={
    Object {
      "User": Object {
        "fullname": "Email Mail",
        "id": 11,
        "username": null,
      },
      "createdAt": "2017-11-09T09:08:15.109Z",
      "description": "This is one of my 'go to' recipes and it takes only about 15 minutes from start to finish. The only prep work really is mashing the garlic. The sauce is great on any pasta, but I prefer angel hair or spaghetti.",
      "downVoteCount": 1,
      "favoriteCount": 1,
      "id": 5,
      "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
      "ingredients": Array [
        "2 tablespoons olive oil",
        "3 cloves garlic",
        "2 tablespoons capers",
        "1 tablespoon anchovy paste",
        "1 teaspoon red pepper flakes",
        "1 (24 ounce) jar tomato pasta sauce",
        "1/4 cup water",
        "1 cup good-quality crisp white wine",
        "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
        "salt and pepper to taste",
        "1 pound dry spaghetti",
        "1/4 cup freshly grated Parmesan cheese",
        "Chopped fresh basil leaves or parsley",
      ],
      "instructions": Array [
        "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
        "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
        "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
      ],
      "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
      "owner": 11,
      "upVoteCount": 1,
      "updatedAt": "2018-01-10T10:54:26.519Z",
      "viewCount": 2,
    }
  }
>
  <div
    className="container page-manage__add z-depth-1"
  >
    <form
      className="my-recipe__add--form"
      onSubmit={[Function]}
    >
      <label
        className="my-recipe__add--form___name"
        htmlFor="recipe-name"
      >
        Name
        <input
          defaultValue="Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref"
          id="recipe-name"
          name="recipe-name"
          onChange={[Function]}
          placeholder="Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref"
          type="text"
        />
      </label>
      <div
        className="description-image"
      >
        <label
          className="my-recipe__add--form___desc"
          htmlFor="recipe-description"
        >
          Description
          <textarea
            defaultValue="This is one of my 'go to' recipes and it takes only about 15 minutes from start to finish. The only prep work really is mashing the garlic. The sauce is great on any pasta, but I prefer angel hair or spaghetti."
            id="recipe-description"
            onChange={[Function]}
            placeholder="e.g: short description..."
          />
        </label>
        <div
          className="my-recipe__add--form___img"
        >
          <p
            className="label"
          >
            Image
          </p>
          <ImageUpload
            altText="Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref"
            className=""
            defaultImgUrl="https://x.kinja-static.com/assets/images/logos/placeholders/default.png"
            imageUploadHandler={[Function]}
            imageUploadProgress="pending"
            imgUrl="http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg"
          >
            <div
              className="image-upload "
            >
              <div
                className="image-upload__preview"
              >
                <img
                  alt="Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref"
                  className="image-upload__preview___image"
                  src="http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg"
                />
                <div
                  className="image-upload__progress"
                />
              </div>
              <label
                className="z-depth-1"
                htmlFor="recipe-image"
              >
                Upload new picture
              </label>
              <input
                accept="image/gif, image/jpeg, image/png"
                id="recipe-image"
                name="filename"
                onChange={[Function]}
                type="file"
              />
            </div>
          </ImageUpload>
        </div>
      </div>
      <div
        className="ingredients-instruction"
      >
        <fieldset
          className="ingredients-form my-recipe__add--form___ingredients"
        >
          <legend>
            Ingredient(s):
          </legend>
          <ol>
            <li
              key="0"
            >
              2 tablespoons olive oil
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="1"
            >
              3 cloves garlic
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="2"
            >
              2 tablespoons capers
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="3"
            >
              1 tablespoon anchovy paste
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="4"
            >
              1 teaspoon red pepper flakes
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="5"
            >
              1 (24 ounce) jar tomato pasta sauce
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="6"
            >
              1/4 cup water
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="7"
            >
              1 cup good-quality crisp white wine
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="8"
            >
              2 (6.5 ounce) cans chopped clams, drained with juice reserved
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="9"
            >
              salt and pepper to taste
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="10"
            >
              1 pound dry spaghetti
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="11"
            >
              1/4 cup freshly grated Parmesan cheese
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="12"
            >
              Chopped fresh basil leaves or parsley
              <a
                className="remove-item remove-ingredients"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
          </ol>
          <a
            className="add-new add-new__ingredient"
            href="/add-new"
            onClick={[Function]}
          >
            <i
              className="mdi mdi-plus"
            />
            <span>
              Add an ingredient
            </span>
          </a>
        </fieldset>
        <fieldset
          className="instructions-form my-recipe__add--form___instructions"
        >
          <legend>
            Instruction(s):
          </legend>
          <ol>
            <li
              key="0"
            >
              Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato
              <a
                className="remove-item remove-instructions"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="1"
            >
              Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.
              <a
                className="remove-item remove-instructions"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
            <li
              key="2"
            >
              Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.
              <a
                className="remove-item remove-instructions"
                href="/delete"
                onClick={[Function]}
              >
                <i
                  className="mdi mdi-delete"
                />
              </a>
            </li>
          </ol>
          <a
            className="add-new add-new__instruction"
            href="/add-new"
            onClick={[Function]}
          >
            <i
              className="mdi mdi-plus"
            />
            <span>
              Add an instruction
            </span>
          </a>
        </fieldset>
      </div>
      <div
        className="form-btns"
      >
        <SubmitButton
          handleClick={[Function]}
          submitLoading={false}
          submitText="Submit"
        >
          <button
            className="
    submit-btn z-depth-1
    
    "
            disabled={false}
            onClick={[Function]}
            type="submit"
          >
            <span>
              Submit
            </span>
            <Loading
              className="loading-icon"
              color="#fff"
              delay={1000}
              height="25px"
              type="spokes"
              width="25px"
            >
              <div
                className="loading-icon"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<svg class=\\"icon-blank\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 32 32\\"></svg>
",
                  }
                }
                style={
                  Object {
                    "fill": "#fff",
                    "height": "25px",
                    "width": "25px",
                  }
                }
              />
            </Loading>
          </button>
        </SubmitButton>
      </div>
    </form>
  </div>
</AddRecipeForm>
`;
